--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,8 @@
 <h1> Product page SHOW !<h1>
 
-<h3><%= @product.name %></h3>
-<h3><%= @product.note %></h3>
-<h3><%= @product.price %></h3>
+<%= @product.name %>
+<%= @product.note %>
+<%= @product.price %>
+<%= @product.status %>
 
 <%= link_to 'Back', products_path %>
