--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,5 @@
 <h1>_____________________________ This is a header ___________________________________ </h1>
+
+  <li>
+  <%= link_to('Logout', destroy_account_session_path, method: :delete) %>
+  </li>
