--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,7 @@
 <h1>_____________________________ This is a header ___________________________________ </h1>
 
+<% if current_account %>
   <li>
   <%= link_to('Logout', destroy_account_session_path, method: :delete) %>
   </li>
+<% end %>
