--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,8 @@
-<h1>_____________________________ This is a footer ___________________________________ </h1>
+<footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
+  <a href="facebook.com"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+  <a href="instagram.com"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  <a href="snapchat.com"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
+  <a href="pinterest.com"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
+  <a href="twitter.com"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+  <a href="linkedin.com"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+</footer>
