--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -22,30 +22,17 @@
     </div>
   </div>
 
-<!--  <div class="mySlides fade">-->
-<!--    <div class="numbertext">3 / 3</div>-->
-<!--    <div class="container">-->
-      <%#= image_tag 'img_snow_wide.jpg' %>
-<!--      <div class="content">-->
-<!--        <h1>Heading</h1>-->
-<!--        <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    </div>-->
-<!--  </div>-->
-
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
 </div>
-<br>
 
-<div style="text-align:center">
+<div class="dot_preview">
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
 </div>
 
+<%= javascript_pack_tag 'top/index' %>
 <script>
     var slideIndex = 1;
     showSlides(slideIndex);
