--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,35 +1,24 @@
 <div class="slideshow-container">
-
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <%= image_tag 'img_lights_wide.jpg' %>
-    <div class="text">Caption Text</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <%= image_tag 'img_mountains_wide.jpg' %>
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade container">
-    <div class="numbertext">3 / 3</div>
-    <%= image_tag 'img_nature_wide.jpg' %>
-    <div class="content">
-      <h1>Heading</h1>
-      <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu
-         recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei.</p>
+  <% index = 0 %>
+  <% @products.each do |p| %>
+    <div class="mySlides fade container">
+      <div class="numbertext"><%= index += 1 %> / <%= @products_count %></div>
+      <%= image_tag 'img_nature_wide.jpg' %>
+      <div class="content">
+        <h1><%= p.name %></h1>
+        <p><%= p.note %></p>
+      </div>
     </div>
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  <% end %>
 </div>
 
 <div class="dot_preview">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
+  <% index = 0 %>
+  <% @products.each do |p| %>
+    <span class="dot" onclick="currentSlide(<%= index += 1%>)"></span>
+  <% end %>
 </div>
 
 <%= javascript_pack_tag 'top/index' %>
