--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -127,3 +127,42 @@ body {
     text-align:center;
     padding: 10px
 }
+
+.product_container {
+    background-color: #f1f1f1;
+}
+.product {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    text-align: center;
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+}
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    font-family: arial;
+    background: white;
+    max-width: 250px;
+    margin: 10px;
+}
+.note {
+    color: grey;
+    font-size: 22px;
+    text-align: left;
+    padding: 5px;
+}
+.card:hover {
+    opacity: 0.7;
+}
+.product_icon {
+    width: 100%;
+}
+.card button {
+    border: none;
+    padding: 12px;
+    color: white;
+    background-color: #999999;
+    text-align: right;
+    width: 100%;
+}
