--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,24 +1,40 @@
-<div class="slideshow-container">
-  <% index = 0 %>
-  <% @products.each do |p| %>
-    <div class="mySlides fade container">
-      <div class="numbertext"><%= index += 1 %> / <%= @products_count %></div>
-      <%= image_tag 'img_nature_wide.jpg' %>
-      <div class="content">
-        <h1><%= p.name %></h1>
-        <p><%= p.note %></p>
+<div class="news">
+  <div class="slideshow-container">
+    <% index = 0 %>
+    <% @products.each do |p| %>
+      <div class="mySlides fade container">
+        <div class="numbertext"><%= index += 1 %> / <%= @products_count %></div>
+        <%= image_tag 'img_nature_wide.jpg' %>
+        <div class="content">
+          <h1><%= p.name %></h1>
+          <p><%= p.note %></p>
+        </div>
       </div>
-    </div>
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  <% end %>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <% end %>
+  </div>
+
+  <div class="dot_preview">
+    <% index = 0 %>
+    <% @products.each do |p| %>
+      <span class="dot" onclick="currentSlide(<%= index += 1%>)"></span>
+    <% end %>
+  </div>
 </div>
 
-<div class="dot_preview">
-  <% index = 0 %>
-  <% @products.each do |p| %>
-    <span class="dot" onclick="currentSlide(<%= index += 1%>)"></span>
-  <% end %>
+<div class="product_container">
+  <h2 style="text-align:center">Products</h2>
+  <div class="product">
+    <% index = 0 %>
+    <% @products.each do |p| %>
+      <div class="card">
+        <%= image_tag 'img_lights_wide.jpg', :class => "product_icon" %>
+        <h1><%= p.name %></h1>
+        <p class="note"><%= p.note %></p>
+      </div>
+    <% end %>
+  </div>
 </div>
 
 <%= javascript_pack_tag 'top/index' %>
