--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,12 @@
+.one-item {
+    background-color: #f1f1f1;
+}
+.header {
+    background-image: url('bak.jpg');
+    no-repeat;
+    background-size:cover;
+    size: 100%;
+}
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
@@ -127,10 +136,6 @@ body {
     text-align:center;
     padding: 10px
 }
-
-.product_container {
-    background-color: #f1f1f1;
-}
 .product {
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -146,9 +151,13 @@ body {
     max-width: 250px;
     margin: 10px;
 }
-.note {
+.card .title{
+    font-size: 18px;
+    text-align: center;
+}
+.card .note {
     color: grey;
-    font-size: 22px;
+    font-size: 14px;
     text-align: left;
     padding: 5px;
 }
@@ -157,6 +166,7 @@ body {
 }
 .product_icon {
     width: 100%;
+    height: 50%;
 }
 .card button {
     border: none;
