--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,9 @@
-<% if current_account %>
-  <li>
-  <%= link_to('Logout', destroy_account_session_path, method: :delete) %>
-  </li>
-<% end %>
+<div class="one-item">
+  <div class="header">
+    <% if current_account %>
+      <li>
+        <%= link_to('Logout', destroy_account_session_path, method: :delete) %>
+      </li>
+    <% end %>
+  </div>
+</div>
