--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,5 @@
 .one-item {
-    background-color: #f1f1f1;
+    background-color: white;
 }
 .header {
     background-image: url('bak.jpg');
@@ -140,9 +140,10 @@ body {
     display: grid;
     grid-template-columns: auto auto auto auto;
     text-align: center;
-    width: 80%;
+    width: 70%;
     margin: auto;
     padding: 10px;
+    border: 1px solid whitesmoke;
 }
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -176,24 +177,57 @@ body {
     text-align: right;
     width: 100%;
 }
-
+.product_title {
+    text-align:center;
+    padding-top: 30px
+}
 .news {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    text-align: center;
-    width: 80%;
+    width: 60%;
     margin: auto;
-    padding: 10px;
-    background-color: #730E15;
+    background-color: #F7F7F7;
 }
 .sidenav {
     height: 100%;
     width: 160px;
-    /*position: fixed;*/
+    text-align: center;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 20px;
+    font-family: arial;
+}
+.main {
+    /*background: #2E2F30;*/
+}
+input[type=submit] {
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.3);
+    border: none;
+    padding: 12px;
+    color: white;
+    background-color: #999999;
+    text-align: left;
+    width: 100%;
+    margin: 3px;
+    opacity: 0.7;
+}
+.label:hover {
+    opacity: 0.7;
+}
+.main h2 {
+    text-align: center;
+}
+.main p {
+    text-align: left;
+    margin: 40px;
+}
+.main .work_pic {
+    width: 100%;
+    height: 50%;
+    margin: 10px;
+}
+.main .info {
+    border: 1px solid #999999;
+    width: 100%;
+    margin: 10px;
 }
