--- a/app/views/top/_get_product.html.erb
+++ b/app/views/top/_get_product.html.erb
@@ -1,12 +1,15 @@
-<div class="one-item">
-  <div class="news">
-    <div class="sidenav">
-      <% @products.each do |p| %>
+<div class="news">
+  <div class="sidenav">
+    <% @products.each do |p| %>
+      <div class="label">
         <%= button_to p.name, get_product_path(p.id), remote: true %>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
+  </div>
 
-    <div class="main">
+  <div class="main">
+    <%= image_tag 'img_snow_wide.jpg', class: 'work_pic' %>
+    <div class="info">
       <h2><%= @product.name %></h2>
       <p><%= @product.note %></p>
       <p><%= @product.price %></p>
