--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -4,7 +4,7 @@
     <% @products.each do |p| %>
       <div class="mySlides fade container">
         <div class="numbertext"><%= index += 1 %> / <%= @products_count %></div>
-        <%= image_tag 'img_nature_wide.jpg' %>
+        <%= image_tag 'img_nature_wide.jpg', class: 'news_img' %>
         <div class="content">
           <h1><%= p.name %></h1>
           <p><%= p.note %></p>
@@ -24,12 +24,12 @@
 </div>
 
 <div class="one-item">
-  <h2 style="text-align:center; padding-top: 30px">Бүтээгдэхүүн</h2>
+  <h2 class="product_title">Бүтээгдэхүүн</h2>
   <div class="product">
     <% index = 0 %>
     <% @products.each do |p| %>
       <div class="card">
-        <%= image_tag 'img_lights_wide.jpg', :class => "product_icon" %>
+        <%= image_tag 'img_lights_wide.jpg', class: 'product_icon' %>
         <h1 class="title"><%= p.name %></h1>
         <p class="note"><%= p.note %></p>
       </div>
@@ -37,8 +37,11 @@
   </div>
 </div>
 
-<div id='get_product'>
-  <%= render 'get_product' %>
+<div class="one-item">
+  <h2 class="product_title">Гүйцэтгэсэн ажлууд</h2>
+  <div id='get_product'>
+    <%= render 'get_product' %>
+  </div>
 </div>
 
 <%= javascript_pack_tag 'top/index' %>
@@ -46,7 +49,7 @@
 <script>
     window.setInterval(function(){
         plusSlides(1);
-    }, 5000);
+    }, 10000);
 
     var slideIndex = 1;
 
