--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,82 +1,83 @@
-<div class="one-item">
-  <div class="slideshow-container">
-    <% index = 0 %>
-    <% @products.each do |p| %>
-      <div class="mySlides fade container">
-        <div class="numbertext"><%= index += 1 %> / <%= @products_count %></div>
-        <%= image_tag 'img_nature_wide.jpg', class: 'news_img' %>
-        <div class="content">
-          <h1><%= p.name %></h1>
-          <p><%= p.note %></p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag 'img_lights_wide.jpg', class: "d-block w-100", alt: "First slide"%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'img_snow_wide.jpg', class: 'd-block w-100', alt: 'Second slide' %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'img_mountains_wide.jpg', class: 'd-block w-100', alt: 'Fourth slide' %>
+      <div class="carousel-caption d-none d-md-block">
+        <h5>What is this</h5>
+        <p>Landing page</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+--------------------------------------------------
+<div id="inSlider" class="carousel slide" data-ride="carousel" >
+  <ol class="carousel-indicators">
+    <li data-target="#inSlider" data-slide-to="0" class="active"></li>
+    <li data-target="#inSlider" data-slide-to="1"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>We craft<br/>
+            brands, web apps,<br/>
+            and user interfaces<br/>
+            we are IN+ studio</h1>
+          <p>Lorem Ipsum is simply dummy text of the printing.</p>
+          <p>
+            <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
+            <a class="caption-link" href="#" role="button">Inspinia Theme</a>
+          </p>
+        </div>
+        <div class="carousel-image wow zoomIn">
+          <%= image_tag 'laptop.png', alt: 'laptop' %>
         </div>
       </div>
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    <% end %>
-  </div>
-
-  <div class="dot_preview">
-    <% index = 0 %>
-    <% @products.each do |p| %>
-      <span class="dot" onclick="currentSlide(<%= index += 1%>)"></span>
-    <% end %>
-  </div>
-</div>
-
-<div class="one-item">
-  <h2 class="product_title">Бүтээгдэхүүн</h2>
-  <div class="product">
-    <% index = 0 %>
-    <% @products.each do |p| %>
-      <div class="card">
-        <%= image_tag 'img_lights_wide.jpg', class: 'product_icon' %>
-        <h1 class="title"><%= p.name %></h1>
-        <p class="note"><%= p.note %></p>
+      <!-- Set background for slide in css -->
+      <div class="header-back one">
+        <%= image_tag 'img_mountains_wide.jpg', class: 'd-block w-100', alt: 'laptop' %>
       </div>
-    <% end %>
+
+    </div>
+    <div class="carousel-item">
+      <div class="container">
+        <div class="carousel-caption blank">
+          <h1>We create meaningful <br/> interfaces that inspire.</h1>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+        </div>
+      </div>
+      <!-- Set background for slide in css -->
+      <div class="header-back two">
+        <%= image_tag 'img_nature_wide.jpg', class: 'd-block w-100', alt: 'laptop' %>
+      </div>
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#inSlider" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#inSlider" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-
-<div class="one-item">
-  <h2 class="product_title">Гүйцэтгэсэн ажлууд</h2>
-  <div id='get_product'>
-    <%= render 'get_product' %>
-  </div>
-</div>
-
-<%= javascript_pack_tag 'top/index' %>
-
-<script>
-    window.setInterval(function(){
-        plusSlides(1);
-    }, 10000);
-
-    var slideIndex = 1;
-
-    showSlides(slideIndex);
-
-    function plusSlides(n) {
-        showSlides(slideIndex += n);
-    }
-
-    function currentSlide(n) {
-        showSlides(slideIndex = n);
-    }
-
-    function showSlides(n) {
-        var i;
-        var slides = document.getElementsByClassName("mySlides");
-        var dots = document.getElementsByClassName("dot");
-        if (n > slides.length) {slideIndex = 1}
-        if (n < 1) {slideIndex = slides.length}
-        for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-        }
-        for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex-1].style.display = "block";
-        dots[slideIndex-1].className += " active";
-    }
-</script>
-
