--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide border-bottom border-dark" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -6,16 +6,20 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag 'img_lights_wide.jpg', class: "d-block w-100", alt: "First slide"%>
+      <%= image_tag 'products.jpg', class: "d-block w-100", alt: "first" %>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'img_snow_wide.jpg', class: 'd-block w-100', alt: 'Second slide' %>
-    </div>
-    <div class="carousel-item">
-      <%= image_tag 'img_mountains_wide.jpg', class: 'd-block w-100', alt: 'Fourth slide' %>
+      <%= image_tag 'business.jpg', class: "d-block w-100", alt: "second" %>
       <div class="carousel-caption d-none d-md-block">
-        <h5>What is this</h5>
-        <p>Landing page</p>
+        <h2>We can create</h2>
+        <p>Enter some text her for example: <br/> We are the best in our field</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'about.jpg', class: "d-block w-100", alt: "third" %>
+      <div class="carousel-caption d-none d-md-block">
+        <h2>This is title</h2>
+        <p>Enter some text her for example: <br/> We are the best in our field</p>
       </div>
     </div>
   </div>
@@ -28,56 +32,25 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
---------------------------------------------------
-<div id="inSlider" class="carousel slide" data-ride="carousel" >
-  <ol class="carousel-indicators">
-    <li data-target="#inSlider" data-slide-to="0" class="active"></li>
-    <li data-target="#inSlider" data-slide-to="1"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>We craft<br/>
-            brands, web apps,<br/>
-            and user interfaces<br/>
-            we are IN+ studio</h1>
-          <p>Lorem Ipsum is simply dummy text of the printing.</p>
-          <p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
-            <a class="caption-link" href="#" role="button">Inspinia Theme</a>
-          </p>
-        </div>
-        <div class="carousel-image wow zoomIn">
-          <%= image_tag 'laptop.png', alt: 'laptop' %>
-        </div>
-      </div>
-      <!-- Set background for slide in css -->
-      <div class="header-back one">
-        <%= image_tag 'img_mountains_wide.jpg', class: 'd-block w-100', alt: 'laptop' %>
-      </div>
+<br/>
 
-    </div>
-    <div class="carousel-item">
-      <div class="container">
-        <div class="carousel-caption blank">
-          <h1>We create meaningful <br/> interfaces that inspire.</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+<section id="product" class="bg-white">
+  <div class="container">
+    <div class="card-columns">
+      <% @products.each do |p| %>
+        <div class="card">
+          <%= image_tag 'product.png', class: "card-img-top", alt: "product" %>
+          <div class="card-body">
+            <h5 class="card-title"><%= p.name %></h5>
+            <p class="card-text"><%= p.note %></p>
+            <footer class="blockquote-footer">
+              <small class="text-muted">
+                <%= p.price %> <cite title="Source Title"><%= p.status %></cite>
+              </small>
+            </footer>
+          </div>
         </div>
-      </div>
-      <!-- Set background for slide in css -->
-      <div class="header-back two">
-        <%= image_tag 'img_nature_wide.jpg', class: 'd-block w-100', alt: 'laptop' %>
-      </div>
+      <% end %>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#inSlider" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#inSlider" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+</section>
