--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,9 @@
+<% if current_account %>
+  <li>
+    <%= link_to('Logout', destroy_account_session_path, method: :delete) %>
+  </li>
+<% end %>
+
 <h1> Product page INDEX !<h1>
 
 <td><%= link_to 'New', new_product_path %></td>
