--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,6 @@
-<h1> Product page SHOW !<h1>
-
-<%= render "form" %>
-
-<%= link_to 'Back', products_path %>
+<div class="ibox ">
+  <div class="ibox-title">
+    <h5>Product Edit <small>update product.</small></h5>
+  </div>
+  <%= render "form" %>
+</div>
