--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,35 +1,45 @@
-<% if current_account %>
-  <li>
-    <%= link_to('Logout', destroy_account_session_path, method: :delete) %>
-  </li>
-<% end %>
+<div class="ibox ">
+  <div class="ibox-title">
+    <h5>Product List <small>all products.</small></h5>
+  </div>
 
-<h1> Product page INDEX !<h1>
-
-<td><%= link_to 'New', new_product_path %></td>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Note</th>
-      <th>Price</th>
-      <th>Status</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.note %></td>
-        <td><%= product.price %></td>
-        <td><%= product.status %></td>
-        <td><%= link_to 'Show', product_path(product) %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="ibox-content">
+    <div class="row">
+      <%= link_to 'New', new_product_path, class: "btn btn-success btn-facebook btn-outline"%>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <input placeholder="Search" type="text" class="form-control form-control-sm">
+            <span class="input-group-append">
+              <button type="button" class="btn btn-sm btn-primary">Go!</button>
+            </span>
+        </div>
+      </div>
+    </div>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>Name</th>
+          <th>Note</th>
+          <th>Price</th>
+          <th>Status</th>
+          <th colspan="3">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+          <% @products.each do |product| %>
+            <tr>
+              <td><div class="icheckbox_square-green checked" style="position: relative;"><%= product.name %></div></td>
+              <td><small><%= product.note %></small></td>
+              <td><%= product.price %></td>
+              <td><%= product.status %></td>
+              <td><%= link_to 'Show', product_path(product), class: "btn btn-info btn-sm btn-outline" %></td>
+              <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm btn-outline" %></td>
+              <td><%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger btn-outline" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
