--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,6 @@
-<h1> Product page NEW !<h1>
-
-<%= render "form" %>
-
-<%= link_to 'Back', products_path %>
+<div class="ibox ">
+  <div class="ibox-title">
+    <h5>Product New <small>create product.</small></h5>
+  </div>
+  <%= render "form" %>
+</div>
