--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,45 +1,52 @@
-<div class="ibox ">
-  <div class="ibox-title">
-    <h5>Product List <small>all products.</small></h5>
-  </div>
-
-  <div class="ibox-content">
+<div class="wrapper gray-bg">
+  <div class="wrapper wrapper-content">
     <div class="row">
-      <%= link_to 'New', new_product_path, class: "btn btn-success btn-facebook btn-outline"%>
-      <div class="col-sm-3">
-        <div class="input-group">
-          <input placeholder="Search" type="text" class="form-control form-control-sm">
-            <span class="input-group-append">
+      <div class="col-lg-12">
+        <div class="ibox">
+          <div class="ibox-title">
+            <h5>Product List <small>all products.</small></h5>
+          </div>
+          <div class="ibox-content">
+            <div class="row">
+              <%= link_to 'New', new_product_path, class: "btn btn-success btn-facebook btn-outline"%>
+              <div class="col-sm-3">
+                <div class="input-group">
+                  <input placeholder="Search" type="text" class="form-control form-control-sm">
+                  <span class="input-group-append">
               <button type="button" class="btn btn-sm btn-primary">Go!</button>
             </span>
+                </div>
+              </div>
+            </div>
+            <div class="table-responsive">
+              <table class="table table-striped">
+                <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Note</th>
+                  <th>Price</th>
+                  <th>Status</th>
+                  <th colspan="3">Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                <% @products.each do |product| %>
+                  <tr>
+                    <td><div class="icheckbox_square-green checked" style="position: relative;"><%= product.name %></div></td>
+                    <td><small><%= product.note %></small></td>
+                    <td><%= product.price %></td>
+                    <td><%= product.status %></td>
+                    <td><%= link_to 'Show', product_path(product), class: "btn btn-info btn-sm btn-outline" %></td>
+                    <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm btn-outline" %></td>
+                    <td><%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger btn-outline" %></td>
+                  </tr>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="table-responsive">
-      <table class="table table-striped">
-        <thead>
-        <tr>
-          <th>Name</th>
-          <th>Note</th>
-          <th>Price</th>
-          <th>Status</th>
-          <th colspan="3">Action</th>
-        </tr>
-        </thead>
-        <tbody>
-          <% @products.each do |product| %>
-            <tr>
-              <td><div class="icheckbox_square-green checked" style="position: relative;"><%= product.name %></div></td>
-              <td><small><%= product.note %></small></td>
-              <td><%= product.price %></td>
-              <td><%= product.status %></td>
-              <td><%= link_to 'Show', product_path(product), class: "btn btn-info btn-sm btn-outline" %></td>
-              <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm btn-outline" %></td>
-              <td><%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger btn-outline" %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
     </div>
   </div>
 </div>
