landing page style 10%

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,38 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <!-- Add Your favicon here -->
-  <!--<link rel="icon" href="img/favicon.ico">-->
-
-  <title>INSPINIA - Landing Page</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="bootstrap.min.css" rel="stylesheet">
-
-  <!-- Animation CSS -->
-  <link href="animate.css" rel="stylesheet">
-
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
-  <!-- Custom styles for this template -->
-  <link href="style.css" rel="stylesheet">
-</head>
 <body id="page-top" class="landing-page">
 <div class="navbar-wrapper">
   <nav class="navbar navbar-default navbar-fixed-top navbar-expand-md" role="navigation">
     <div class="container">
-      <a class="navbar-brand" href="index.html">WEBAPPLAYERS</a>
+      <a class="navbar-brand" href="index.html">Гуулин дөш</a>
       <div class="navbar-header page-scroll">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
           <i class="fa fa-bars"></i>
@@ -40,12 +10,13 @@
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a class="nav-link page-scroll" href="#page-top">Home</a></li>
-          <li><a class="nav-link page-scroll" href="#features">Features</a></li>
-          <li><a class="nav-link page-scroll" href="#team">Team</a></li>
-          <li><a class="nav-link page-scroll" href="#testimonials">Testimonials</a></li>
-          <li><a class="nav-link page-scroll" href="#pricing">Pricing</a></li>
-          <li><a class="nav-link page-scroll" href="#contact">Contact</a></li>
+          <li><a class="nav-link page-scroll" href="#page-top">Эхлэл</a></li>
+          <li><a class="nav-link page-scroll" href="#features">Онцлог</a></li>
+          <li><a class="nav-link page-scroll" href="#product">Бүтээгдэхүүн</a></li>
+          <li><a class="nav-link page-scroll" href="#team">Хамт олон</a></li>
+          <li><a class="nav-link page-scroll" href="#testimonials">Харилцагчид</a></li>
+          <li><a class="nav-link page-scroll" href="#news">Мэдээ</a></li>
+          <li><a class="nav-link page-scroll" href="#contact">Хаяг</a></li>
         </ul>
       </div>
     </div>
@@ -60,14 +31,14 @@
     <div class="carousel-item active">
       <div class="container">
         <div class="carousel-caption">
-          <h1>We craft<br/>
-            brands, web apps,<br/>
-            and user interfaces<br/>
-            we are IN+ studio</h1>
+          <h1>Бид углана<br/>
+            найдвартай байдал, төмөр,<br/>
+            барилгын бүтээгдэхүүн<br/>
+            Хайлш хашлага</h1>
           <p>Lorem Ipsum is simply dummy text of the printing.</p>
           <p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
-            <a class="caption-link" href="#" role="button">Inspinia Theme</a>
+            <a class="btn btn-lg btn-primary" href="#" role="button">Facebook page</a>
+            <a class="caption-link" href="#" role="button">Social page</a>
           </p>
         </div>
         <div class="carousel-image wow zoomIn">
@@ -83,9 +54,9 @@
     <div class="carousel-item">
       <div class="container">
         <div class="carousel-caption blank">
-          <h1>We create meaningful <br/> interfaces that inspire.</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          <h1>Чанартай <br/> бүтээгдэхүүн урлах.</h1>
+          <p>Итгэлийг чанараар баталгаажуулна.</p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Facebook page</a></p>
         </div>
       </div>
       <!-- Set background for slide in css -->
@@ -635,6 +606,3 @@
     </div>
   </div>
 </section>
-
-</body>
-</html>
