--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -4,11 +4,11 @@
       <div class="col-lg-12">
         <div class="ibox">
           <div class="ibox-title">
-            <h5>Product List <small>all products.</small></h5>
+            <h5>News List <small>all news.</small></h5>
           </div>
           <div class="ibox-content">
             <div class="row">
-              <%= link_to 'New', new_product_path, class: "btn btn-success btn-facebook btn-outline"%>
+              <%= link_to 'New', new_news_path, class: "btn btn-success btn-facebook btn-outline"%>
               <div class="col-sm-3">
                 <div class="input-group">
                   <input placeholder="Search" type="text" class="form-control form-control-sm">
@@ -22,29 +22,27 @@
               <table class="table table-striped">
                 <thead>
                 <tr>
-                  <th>Name</th>
-                  <th>Note</th>
+                  <th>Title</th>
                   <th>Status</th>
-                  <th>Price</th>
+                  <th>Subject</th>
                   <th>Action</th>
                 </tr>
                 </thead>
                 <tbody>
-                <% @products.each do |product| %>
+                <% @newses.each do |news| %>
                   <tr class="footable-even">
-                    <td><div class="icheckbox_square-green checked" style="position: relative;"><%= product.name %></div></td>
-                    <td><small><%= product.note %></small></td>
+                    <td><div class="icheckbox_square-green checked" style="position: relative;"><%= news.title %></div></td>
                     <td class="footable-visible">
-                      <% if product.active? %>
-                        <span class="label label-primary"><%= product.status %></span>
+                      <% if news.active? %>
+                        <span class="label label-primary"><%= news.status %></span>
                       <% else %>
-                        <span class="label label-danger"><%= product.status %></span>
+                        <span class="label label-danger"><%= news.status %></span>
                       <% end %>
                     </td>
-                    <td><%= product.price %></td>
-                    <td><%= link_to 'Show', product_path(product), class: "btn btn-info btn-sm btn-outline" %>
-                        <%= link_to 'Edit', edit_product_path(product), class: "btn btn-warning btn-sm btn-outline" %>
-                        <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger btn-outline" %></td>
+                    <td><small><%= news.subject %></small></td>
+                    <td><%= link_to 'Show', news_path(news), class: "btn btn-info btn-sm btn-outline" %>
+                        <%= link_to 'Edit', edit_news_path(news), class: "btn btn-warning btn-sm btn-outline" %>
+                        <%= link_to 'Delete', news, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger btn-outline" %></td>
                   </tr>
                 <% end %>
                 </tbody>
