--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -122,7 +122,7 @@
       </div>
     </div>
     <div class="col-md-6 text-center  wow zoomIn">
-      <img src="img/perspective.png" alt="dashboard" class="img-fluid">
+      <%= image_tag "perspective.png", alt: "dashboard", class: "img_fluid" %>
     </div>
     <div class="col-md-3 text-center wow fadeInRight">
       <div>
@@ -152,7 +152,7 @@
       <a href="" class="btn btn-primary">Learn more</a>
     </div>
     <div class="col-lg-6 text-right wow fadeInRight">
-      <img src="img/dashboard.png" alt="dashboard" class="img-fluid float-right">
+      <%= image_tag "dashboard.png", alt: "dashboard", class: "img-fluid float-right" %>
     </div>
   </div>
 </section>
@@ -169,7 +169,7 @@
     <div class="row">
       <div class="col-sm-4 wow fadeInLeft">
         <div class="team-member">
-          <img src="img/avatar3.jpg" class="img-fluid rounded-circle img-small" alt="">
+          <%= image_tag "avatar3.jpg", alt: "", class: "img-fluid round-circle img-small" %>
           <h4><span class="navy">Amelia</span> Smith</h4>
           <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus. </p>
           <ul class="list-inline social-icon">
@@ -184,7 +184,7 @@
       </div>
       <div class="col-sm-4">
         <div class="team-member wow zoomIn">
-          <img src="img/avatar1.jpg" class="img-fluid rounded-circle" alt="">
+          <%= image_tag "avatar8.jpg", class: "img-fluid rounded-circle" %>
           <h4><span class="navy">John</span> Novak</h4>
           <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
           <ul class="list-inline social-icon">
@@ -199,7 +199,7 @@
       </div>
       <div class="col-sm-4 wow fadeInRight">
         <div class="team-member">
-          <img src="img/avatar2.jpg" class="img-fluid rounded-circle img-small" alt="">
+          <%= image_tag "avatar2.jpg", class: "img-fluid rounded-circle img-small" %>
           <h4><span class="navy">Peter</span> Johnson</h4>
           <p>Lorem ipsum dolor sit amet, illum fastidii dissentias quo ne. Sea ne sint animal iisque, nam an soluta sensibus.</p>
           <ul class="list-inline social-icon">
@@ -238,7 +238,7 @@
         <a href="" class="btn btn-primary">Learn more</a>
       </div>
       <div class="col-lg-6 text-right m-t-n-lg wow zoomIn">
-        <img src="img/iphone.jpg" class="img-fluid" alt="dashboard">
+        <%= image_tag "iphone.jpg", class: "img-fuild", alt: "dashboard" %>
       </div>
       <div class="col-lg-3 features-text text-right wow fadeInRight">
         <small>INSPINIA</small>
@@ -349,7 +349,7 @@
         </div>
         <div class="comments-avatar">
           <a href="" class="float-left">
-            <img alt="image" src="img/avatar3.jpg">
+            <%= image_tag "avatar3.jpg", alt: "image" %>
           </a>
           <div class="media-body">
             <div class="commens-name">
@@ -366,7 +366,7 @@
         </div>
         <div class="comments-avatar">
           <a href="" class="float-left">
-            <img alt="image" src="img/avatar1.jpg">
+            <%= image_tag "avatar9.jpg", alt: "image" %>
           </a>
           <div class="media-body">
             <div class="commens-name">
@@ -383,7 +383,7 @@
         </div>
         <div class="comments-avatar">
           <a href="" class="float-left">
-            <img alt="image" src="img/avatar2.jpg">
+            <%= image_tag "avatar2.jpg", alt: "image" %>
           </a>
           <div class="media-body">
             <div class="commens-name">
