--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -45,7 +45,7 @@
             <p>Lorem Ipsum is simply dummy text of the printing.</p>
             <p>
               <a class="btn btn-lg btn-primary" href="#" role="button">READ MORE</a>
-              <a class="caption-link" href="#" role="button">Inspinia Theme</a>
+              <a class="caption-link" href="#" role="button">Guulin Dush</a>
             </p>
           </div>
           <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
