--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -26,10 +26,10 @@
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label"><%= f.label :status %>:</label>
                   <div class="col-sm-10">
-                    <small class="text-navy">Active</small>
-                    <%= f.radio_button :status, :active, checked: true %>
-                    <small class="text-navy">Inactive</small>
-                    <%= f.radio_button :status, :inactive %>
+                    <small class="text-danger">Disable</small>
+                    <%= f.radio_button :status, :disable, checked: true %>
+                    <small class="text-navy">Enable</small>
+                    <%= f.radio_button :status, :enable %>
                   </div>
                 </div>
                 <div class="form-group row">
