--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -66,7 +66,7 @@
                   <td><div class="icheckbox_square-green checked" style="position: relative;"><%= news.title %></div></td>
                   <td><small><%= news.subject %></small></td>
                   <td class="footable-visible">
-                    <% if news.active? %>
+                    <% if news.enable? %>
                       <span class="label label-primary"><%= news.status %></span>
                     <% else %>
                       <span class="label label-danger"><%= news.status %></span>
