--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -32,10 +32,10 @@
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label"><%= f.label :status %>:</label>
                   <div class="col-sm-10">
+                    <small class="text-danger">Disable</small>
+                    <%= f.radio_button :status, :disable, checked: true %>
                     <small class="text-navy">Enable</small>
-                    <%= f.radio_button :status, :enable, checked: true %>
-                    <small class="text-navy">Disable</small>
-                    <%= f.radio_button :status, :disable %>
+                    <%= f.radio_button :status, :enable %>
                   </div>
                 </div>
                 <div class="form-group row">
