--- a/app/views/news/edit.html.erb
+++ b/app/views/news/edit.html.erb
@@ -3,7 +3,7 @@
     <h2>News Edit <small>update news.</small></h2>
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <%= link_to '/News index', news_index_path %>
+        <%= link_to '/news index', news_index_path %>
       </li>
     </ol>
   </div>
