--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -60,10 +60,10 @@
               <h2 class="font-bold m-b-xs">
                 <%= @product.name %>
               </h2>
+              <hr><%= @product.price %><hr>
               <div class="m-t-md">
-                <small><%= @product.price %></small>
+                <small><%= @product.note %></small>
               </div>
-              <hr><%= @product.note %><hr>
               <hr><%= @product.status %><hr>
               <div>
               </div>
