--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
     <div class="tabs-container">
       <ul class="nav nav-tabs">
-        <li><a class="nav-link active" data-toggle="tab" href="#tab-form"> Discount</a></li>
+        <li><a class="nav-link active" data-toggle="tab" href="#tab-form"> Data</a></li>
         <li><a class="nav-link" data-toggle="tab" href="#tab-image"> Images</a></li>
       </ul>
       <div class="tab-content">
