--- a/app/views/performances/index.html.erb
+++ b/app/views/performances/index.html.erb
@@ -1,50 +1,102 @@
-<div class="row">
-  <div class="col-lg-12">
-    <div class="ibox">
-      <div class="ibox-title">
-        <h5>Performances List <small>all performances.</small></h5>
+<div class="row wrapper border-bottom white-bg page-heading">
+  <div class="col-lg-10">
+    <h2>Performance Index <small>list performance.</small></h2>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item">
+        <%= link_to '/performance index', performances_path %>
+      </li>
+    </ol>
+  </div>
+</div>
+
+<div class="wrapper-content ecommerce">
+  <div class="ibox-content m-b-sm border-bottom">
+    <div class="row">
+      <div class="col-sm-2">
+        <%= link_to 'New', new_performance_path, class: "btn btn-success btn-facebook btn-outline" %>
       </div>
-      <div class="ibox-content">
-        <div class="row">
-          <%= link_to 'New', new_performance_path, class: "btn btn-success btn-facebook btn-outline"%>
-          <div class="col-sm-3">
-            <div class="input-group">
-              <input placeholder="Search" type="text" class="form-control form-control-sm">
-              <span class="input-group-append">
-          <button type="button" class="btn btn-sm btn-primary">Go!</button>
-        </span>
-            </div>
-          </div>
+      <div class="col-sm-4">
+        <div class="form-group">
+          <label class="col-form-label" for="performance_name">Title</label>
+          <input type="text" id="performance_name" name="performance_name" value="" placeholder="Name" class="form-control">
         </div>
-        <div class="table-responsive">
-          <table class="table table-striped">
+      </div>
+      <div class="col-sm-2">
+        <div class="form-group">
+          <label class="col-form-label" for="price">Subject</label>
+          <input type="text" id="price" name="price" value="" placeholder="Note" class="form-control">
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="form-group">
+          <label class="col-form-label" for="status">Status</label>
+          <select name="status" id="status" class="form-control">
+            <option value="1" selected="">Enabled</option>
+            <option value="0">Disabled</option>
+          </select>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="ibox">
+        <div class="ibox-content">
+          <table class="table table-stripped">
             <thead>
             <tr>
+              <th>Images</th>
               <th>Title</th>
-              <th>Subject</th>
+              <th>Period</th>
+              <th>subject</th>
               <th>Status</th>
-              <th>Action</th>
+              <th class="text-right">Action</th>
             </tr>
             </thead>
             <tbody>
             <% @performances.each do |performance| %>
               <tr class="footable-even">
+                <td>
+                  <% if performance.images.attached? %>
+                    <% performance.images.each do |image| %>
+                      <%= image_tag(url_for(image), class: "img-thumbnail", style: "width:8em; height:6em;") %>
+                    <% end %>
+                  <% end %>
+                </td>
                 <td><div class="icheckbox_square-green checked" style="position: relative;"><%= performance.title %></div></td>
+                <td><%= performance.period %></td>
                 <td><small><%= performance.subject %></small></td>
                 <td class="footable-visible">
-                  <% if performance.active? %>
+                  <% if performance.enable? %>
                     <span class="label label-primary"><%= performance.status %></span>
                   <% else %>
                     <span class="label label-danger"><%= performance.status %></span>
                   <% end %>
                 </td>
-                <td><small><%= performance.period %></small></td>
-                <td><%= link_to 'Show', performance_path(performance), class: "btn btn-info btn-sm btn-outline" %>
-                    <%= link_to 'Edit', edit_performance_path(performance), class: "btn btn-warning btn-sm btn-outline" %>
-                    <%= link_to 'Delete', performance, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger btn-outline" %></td>
+                <td class="text-right">
+                  <div class="btn-group">
+                    <%= link_to 'Show', performance_path(performance), class: "btn-white btn btn-xs" %>
+                    <%= link_to 'Edit', edit_performance_path(performance), class: "btn-white btn btn-xs" %>
+                    <%= link_to 'Delete', performance, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-white btn btn-xs btn-danger btn-outline" %>
+                  </div>
+                </td>
               </tr>
             <% end %>
             </tbody>
+            <tfoot>
+            <tr>
+              <td colspan="6" class="footable-visible">
+                <ul class="pagination float-right">
+                  <li class="footable-page-arrow"><a data-page="first" href="#first">«</a></li>
+                  <li class="footable-page-arrow"><a data-page="prev" href="#prev">‹</a></li>
+                  <li class="footable-page"><a data-page="0" href="#">1</a></li>
+                  <li class="footable-page active"><a data-page="1" href="#">2</a></li>
+                  <li class="footable-page-arrow disabled"><a data-page="next" href="#next">›</a></li>
+                  <li class="footable-page-arrow disabled"><a data-page="last" href="#last">»</a></li></ul>
+              </td>
+            </tr>
+            </tfoot>
           </table>
         </div>
       </div>
